--- a/portfolio.html
+++ b/portfolio.html
@@ -84,12 +84,12 @@
       <nav>
         <ul class="navigation-set">
           <li class="navigation-set__item">
-            <a href="./index.html" class="navigation-set__link navigation-set__link--current"
-              >Студия</a
-            >
+            <a href="./index.html" class="navigation-set__link">Студия</a>
           </li>
           <li class="navigation-set__item">
-            <a href="./portfolio.html" class="navigation-set__link">Портфолио</a>
+            <a href="./portfolio.html" class="navigation-set__link navigation-set__link--current"
+              >Портфолио</a
+            >
           </li>
           <li class="navigation-set__item">
             <a href="" class="navigation-set__link">Контакты</a>
