--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
       <div class="header__container container">
         <!-- Логотип сайта -->
         <a href="" class="logo"><span class="logo__accent">Web</span>Studio</a>
-        <button type="button" class="menu-button js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+        <button
+          type="button"
+          class="menu-button js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
           <svg width="40" height="40" class="menu-button__icon">
             <use href="./images/new-sprite.svg#icon-menu"></use>
           </svg>
@@ -35,7 +40,9 @@
         <nav class="navigation-flex">
           <ul class="navigation-set-flex">
             <li class="navigation-set-flex__item">
-              <a href="./index.html" class="navigation-set-flex__link navigation-set-flex__link--current"
+              <a
+                href="./index.html"
+                class="navigation-set-flex__link navigation-set-flex__link--current"
                 >Студия</a
               >
             </li>
@@ -71,47 +78,47 @@
     <div class="menu-container js-menu-container" id="mobile-menu">
       <button type="button" class="menu-toggle js-close-menu">
         <svg width="40" height="40" class="menu-button__icon">
-            <use href="./images/new-sprite.svg#icon-close_menu"></use>
-          </svg>
+          <use href="./images/new-sprite.svg#icon-close_menu"></use>
+        </svg>
       </button>
       <nav>
-          <ul class="navigation-set">
-            <li class="navigation-set__item">
-              <a href="./index.html" class="navigation-set__link navigation-set__link--current"
-                >Студия</a
-              >
-            </li>
-            <li class="navigation-set__item">
-              <a href="./portfolio.html" class="navigation-set__link">Портфолио</a>
-            </li>
-            <li class="navigation-set__item">
-              <a href="" class="navigation-set__link">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="contacts-set">
-          <li class="contacts-set__item">
-             <a href="tel:+380961111111" class="contacts-set__link-tel">
-              <span>+380 961 111 111</span>
-            </a>
+        <ul class="navigation-set">
+          <li class="navigation-set__item">
+            <a href="./index.html" class="navigation-set__link navigation-set__link--current"
+              >Студия</a
+            >
           </li>
-          <li class="contacts-set__item">
-           <a href="mailto:info@devstudio.com" class="contacts-set__link-mail">
-              <span> info@devstudio.com</span>
-            </a>
+          <li class="navigation-set__item">
+            <a href="./portfolio.html" class="navigation-set__link">Портфолио</a>
+          </li>
+          <li class="navigation-set__item">
+            <a href="" class="navigation-set__link">Контакты</a>
           </li>
         </ul>
-        <ul class="social-mob">
-          <li class="social-mob__item"><a href="" class="social-mob__link">Instagram</a></li>
-          <li class="social-mob__item"><a href="" class="social-mob__link">Twitter</a></li>
-          <li class="social-mob__item"><a href="" class="social-mob__link">Facebook</a></li>
-          <li class="social-mob__item"><a href="" class="social-mob__link">LinkedIn</a></li>
-        </ul>
+      </nav>
+      <ul class="contacts-set">
+        <li class="contacts-set__item">
+          <a href="tel:+380961111111" class="contacts-set__link-tel">
+            <span>+380 961 111 111</span>
+          </a>
+        </li>
+        <li class="contacts-set__item">
+          <a href="mailto:info@devstudio.com" class="contacts-set__link-mail">
+            <span> info@devstudio.com</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="social-mob">
+        <li class="social-mob__item"><a href="" class="social-mob__link">Instagram</a></li>
+        <li class="social-mob__item"><a href="" class="social-mob__link">Twitter</a></li>
+        <li class="social-mob__item"><a href="" class="social-mob__link">Facebook</a></li>
+        <li class="social-mob__item"><a href="" class="social-mob__link">LinkedIn</a></li>
+      </ul>
     </div>
 
     <main>
       <!-- Заголовок страницы -->
-      <section class="hero container">
+      <section class="hero">
         <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="hero__button" data-modal-open>Заказать услугу</button>
       </section>
@@ -206,17 +213,16 @@
                 <source
                   srcset="./images/igor-dem-270-1x.jpg 270w, ./images/igor-dem-270-2x.jpg 540w"
                   media="(min-width: 1200px)"
-                  sizes="270px"
+                  sizes="(min-width: 1200px) 270px"
                 />
                 <source
                   srcset="./images/igor-dem-354-1x.jpg 354w, ./images/igor-dem-354-2x.jpg 708w"
                   media="(min-width: 768px)"
-                  sizes="354px"
+                  sizes="(min-width: 768px) 354px"
                 />
                 <source
                   srcset="./images/igor-dem-450-1x.jpg 450w, ./images/igor-dem-450-2x.jpg 900w"
-                  media="(min-width: 480px)"
-                  sizes="450px, 100vw"
+                  sizes="(min-width: 480px) 450px, 100vw"
                 />
                 <img src="./images/igor-dem-450-1x.jpg" alt="фото Игорь Демьяненко" />
               </picture>
@@ -260,17 +266,16 @@
                 <source
                   srcset="./images/olga-rep-270-1x.jpg 270w, ./images/olga-rep-270-2x.jpg 540w"
                   media="(min-width: 1200px)"
-                  sizes="270px"
+                  sizes="(min-width: 1200px) 270px"
                 />
                 <source
                   srcset="./images/olga-rep-354-1x.jpg 354w, ./images/olga-rep-354-2x.jpg 708w"
                   media="(min-width: 768px)"
-                  sizes="354px"
+                  sizes="(min-width: 768px) 354px"
                 />
                 <source
                   srcset="./images/olga-rep-450-1x.jpg 450w, ./images/olga-rep-450-2x.jpg 900w"
-                  media="(min-width: 480px)"
-                  sizes="450px, 100vw"
+                  sizes="(min-width: 480px) 450px, 100vw"
                 />
                 <img src="./images/olga-rep-450-1x.jpg" alt="фото Ольга Репина" />
               </picture>
@@ -278,7 +283,7 @@
               <div class="our-team-set__wrap">
                 <h3 class="our-team-set__title">Ольга Репина</h3>
                 <p class="our-team-set__text">Frontend Developer</p>
-                <ul class="social-icons-set our-team-set__social-icons-set"">
+                <ul class="social-icons-set our-team-set__social-icons-set">
                   <li class="social-icons-set__item">
                     <a href="" class="social-icons-set__link social-icons-set__link--color">
                       <svg width="20" height="20" class="social-icons-set__icon">
@@ -316,24 +321,23 @@
                 <source
                   srcset="./images/nick-tar-270-1x.jpg 270w, ./images/nick-tar-270-2x.jpg 540w"
                   media="(min-width: 1200px)"
-                  sizes="270px"
+                  sizes="(min-width: 1200px) 270px"
                 />
                 <source
                   srcset="./images/nick-tar-354-1x.jpg 354w, ./images/nick-tar-354-2x.jpg 708w"
                   media="(min-width: 768px)"
-                  sizes="354px"
+                  sizes="(min-width: 768px) 354px"
                 />
                 <source
                   srcset="./images/nick-tar-450-1x.jpg 450w, ./images/nick-tar-450-2x.jpg 900w"
-                  media="(min-width: 480px)"
-                  sizes="450px, 100vw"
+                  sizes="(min-width: 480px) 450px, 100vw"
                 />
                 <img src="./images/nick-tar-450-1x.jpg" alt="фото Николай Тарасов" />
               </picture>
               <div class="our-team-set__wrap">
                 <h3 class="our-team-set__title">Николай Тарасов</h3>
                 <p class="our-team-set__text">Marketing</p>
-                <ul class="social-icons-set our-team-set__social-icons-set"">
+                <ul class="social-icons-set our-team-set__social-icons-set">
                   <li class="social-icons-set__item">
                     <a href="" class="social-icons-set__link social-icons-set__link--color">
                       <svg width="20" height="20" class="social-icons-set__icon">
@@ -371,24 +375,23 @@
                 <source
                   srcset="./images/mich-erm-270-1x.jpg 270w, ./images/mich-erm-270-2x.jpg 540w"
                   media="(min-width: 1200px)"
-                  sizes="270px"
+                  sizes="(min-width: 1200px) 270px"
                 />
                 <source
                   srcset="./images/mich-erm-354-1x.jpg 354w, ./images/mich-erm-354-2x.jpg 708w"
                   media="(min-width: 768px)"
-                  sizes="354px"
+                  sizes="(min-width: 768px) 354px"
                 />
                 <source
                   srcset="./images/mich-erm-450-1x.jpg 450w, ./images/mich-erm-450-2x.jpg 900w"
-                  media="(min-width: 480px)"
-                  sizes="450px, 100vw"
+                  sizes="(min-width: 480px) 450px, 100vw"
                 />
                 <img src="./images/mich-erm-450-1x.jpg" alt="фото Михаил Ермаков" />
               </picture>
               <div class="our-team-set__wrap">
                 <h3 class="our-team-set__title">Михаил Ермаков</h3>
                 <p class="our-team-set__text">UI Designer</p>
-                <ul class="social-icons-set our-team-set__social-icons-set"">
+                <ul class="social-icons-set our-team-set__social-icons-set">
                   <li class="social-icons-set__item">
                     <a href="" class="social-icons-set__link social-icons-set__link--color">
                       <svg width="20" height="20" class="social-icons-set__icon">
@@ -537,8 +540,14 @@
         <form class="sign-form">
           <div>
             <label for="sign-form" class="sign-form__label">Подпишитесь на рассылку</label>
-            <input id="sign-form" type="email" name="email" class="sign-form__input" placeholder="E-mail" />
-          </div>  
+            <input
+              id="sign-form"
+              type="email"
+              name="email"
+              class="sign-form__input"
+              placeholder="E-mail"
+            />
+          </div>
           <button type="submit" class="sign-form__button">
             Подписаться
             <svg width="24" height="24" class="sign-form__button-icon">
@@ -606,7 +615,7 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
-     <script
+    <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
