--- a/index.html
+++ b/index.html
@@ -183,21 +183,45 @@
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="our-work-set">
             <li class="our-work-set__item">
-              <img src="./images/computer-and-tablet-1.jpg" alt="computer and tablet" width="370" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/computer-and-tablet-1-370-1x.jpg 1x,
+                    ./images/computer-and-tablet-1-370-2x.jpg 2x
+                  "
+                  sizes="(min-width: 1200px) 370px"
+                />
+                <img src="./images/computer-and-tablet-1-370-1x.jpg" alt="computer and tablet" />
+              </picture>
               <p class="our-work-set__lebel">Десктопные приложения</p>
             </li>
 
             <li class="our-work-set__item">
-              <img
-                src="./images/computer-and-smartphone-1.jpg"
-                alt="computer and smartphone"
-                width="370"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/computer-and-smartphone-1-370-1x.jpg 1x,
+                    ./images/computer-and-smartphone-1-370-2x.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/computer-and-smartphone-1-370-1x.jpg"
+                  alt="computer and smartphone"
+                />
+              </picture>
               <p class="our-work-set__lebel">Мобильные приложения</p>
             </li>
 
             <li class="our-work-set__item">
-              <img src="./images/computer-and-tablet-2.jpg" alt="computer and tablet" width="370" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/computer-and-tablet-2-370-1x.jpg 1x,
+                    ./images/computer-and-tablet-2-370-2x.jpg 2x
+                  "
+                />
+                <img src="./images/computer-and-tablet-2-370-1x.jpg" alt="computer and tablet" />
+              </picture>
               <p class="our-work-set__lebel">Дизайнерские решения</p>
             </li>
           </ul>
