--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <svg width="16" height="12" class="contacts-set-flex__icon">
                 <use href="./images/new-sprite.svg#icon-envelope"></use>
               </svg>
-              <span> info@devstudio.com</span>
+              info@devstudio.com
             </a>
           </li>
           <li class="contacts-set-flex__item">
@@ -68,7 +68,7 @@
               <svg width="10" height="16" class="contacts-set-flex__icon">
                 <use href="./images/new-sprite.svg#icon-phone"></use>
               </svg>
-              <span>+380 961 111 111</span>
+              +380 961 111 111
             </a>
           </li>
         </ul>
@@ -189,7 +189,6 @@
                     ./images/computer-and-tablet-1-370-1x.jpg 1x,
                     ./images/computer-and-tablet-1-370-2x.jpg 2x
                   "
-                  sizes="(min-width: 1200px) 370px"
                 />
                 <img src="./images/computer-and-tablet-1-370-1x.jpg" alt="computer and tablet" />
               </picture>
@@ -515,7 +514,7 @@
                 <a
                   href="https://goo.gl/maps/mUnxRLxeDmvpBzua8"
                   target="_blank"
-                  class="address__link address-set__link--accent"
+                  class="address__link address__link--accent"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
