--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
               <svg width="16" height="12" class="contacts-set-flex__icon">
                 <use href="./images/new-sprite.svg#icon-envelope"></use>
               </svg>
-              <span> info@devstudio.com</span>
+              info@devstudio.com
             </a>
           </li>
           <li class="contacts-set-flex__item">
@@ -68,7 +68,7 @@
               <svg width="10" height="16" class="contacts-set-flex__icon">
                 <use href="./images/new-sprite.svg#icon-phone"></use>
               </svg>
-              <span>+380 961 111 111</span>
+              +380 961 111 111
             </a>
           </li>
         </ul>
@@ -149,7 +149,7 @@
                         ./images/tehnokriak-370-2x.jpg 740w
                       "
                       media="(min-width: 1200px)"
-                      sizes="370px"
+                      sizes="(min-width: 1200px) 370px"
                     />
                     <source
                       srcset="
@@ -157,15 +157,14 @@
                         ./images/tehnokriak-354-2x.jpg 708w
                       "
                       media="(min-width: 768px)"
-                      sizes="354px"
+                      sizes="(min-width: 768px) 354px"
                     />
                     <source
                       srcset="
                         ./images/tehnokriak-450-1x.jpg 450w,
                         ./images/tehnokriak-450-2x.jpg 900w
                       "
-                      media="(min-width: 480px)"
-                      sizes="450px, 100vw"
+                      sizes="(min-width: 480px) 450px, 100vw"
                     />
                     <img src="./images/tehnokriak-370-1x.jpg" alt="laptop" />
                   </picture>
@@ -192,7 +191,7 @@
                         ./images/new-orlean-vs-golden-star-370-2x.jpg 740w
                       "
                       media="(min-width: 1200px)"
-                      sizes="370px"
+                      sizes="(min-width: 1200px) 370px"
                     />
                     <source
                       srcset="
@@ -200,15 +199,14 @@
                         ./images/new-orlean-vs-golden-star-354-2x.jpg 708w
                       "
                       media="(min-width: 768px)"
-                      sizes="354px"
+                      sizes="(min-width: 768px) 354px"
                     />
                     <source
                       srcset="
                         ./images/new-orlean-vs-golden-star-450-1x.jpg 450w,
                         ./images/new-orlean-vs-golden-star-450-2x.jpg 900w
                       "
-                      media="(min-width: 480px)"
-                      sizes="450px, 100vw"
+                      sizes="(min-width: 480px) 450px, 100vw"
                     />
                     <img
                       src="./images/new-orlean-vs-golden-star-370-1x.jpg"
@@ -238,7 +236,7 @@
                         ./images/restorant-seafood-370-2x.jpg 740w
                       "
                       media="(min-width: 1200px)"
-                      sizes="370px"
+                      sizes="(min-width: 1200px) 370px"
                     />
                     <source
                       srcset="
@@ -246,15 +244,14 @@
                         ./images/restorant-seafood-354-2x.jpg 708w
                       "
                       media="(min-width: 768px)"
-                      sizes="354px"
+                      sizes="(min-width: 768px) 354px"
                     />
                     <source
                       srcset="
                         ./images/restorant-seafood-450-1x.jpg 450w,
                         ./images/restorant-seafood-450-2x.jpg 900w
                       "
-                      media="(min-width: 480px)"
-                      sizes="450px, 100vw"
+                      sizes="(min-width: 480px) 450px, 100vw"
                     />
                     <img src="./images/restorant-seafood-370-1x.jpg" alt="Ресторан Seafood" />
                   </picture>
@@ -278,17 +275,16 @@
                     <source
                       srcset="./images/prime-370-1x.jpg 370w, ./images/prime-370-2x.jpg 740w"
                       media="(min-width: 1200px)"
-                      sizes="370px"
+                      sizes="(min-width: 1200px) 370px"
                     />
                     <source
                       srcset="./images/prime-354-1x.jpg 354w, ./images/prime-354-2x.jpg 708w"
                       media="(min-width: 768px)"
-                      sizes="354px"
+                      sizes="(min-width: 768px) 354px"
                     />
                     <source
                       srcset="./images/prime-450-1x.jpg 450w, ./images/prime-450-2x.jpg 900w"
-                      media="(min-width: 480px)"
-                      sizes="450px, 100vw"
+                      sizes="(min-width: 480px) 450px, 100vw"
                     />
                     <img src="./images/prime-370-1x.jpg" alt="Проект Prime" />
                   </picture>
@@ -312,17 +308,16 @@
                     <source
                       srcset="./images/boxes-370-1x.jpg 370w, ./images/boxes-370-2x.jpg 740w"
                       media="(min-width: 1200px)"
-                      sizes="370px"
+                      sizes="(min-width: 1200px) 370px"
                     />
                     <source
                       srcset="./images/boxes-354-1x.jpg 354w, ./images/boxes-354-2x.jpg 708w"
                       media="(min-width: 768px)"
-                      sizes="354px"
+                      sizes="(min-width: 768px) 354px"
                     />
                     <source
                       srcset="./images/boxes-450-1x.jpg 450w, ./images/boxes-450-2x.jpg 900w"
-                      media="(min-width: 480px)"
-                      sizes="450px, 100vw"
+                      sizes="(min-width: 480px) 450px, 100vw"
                     />
                     <img src="./images/boxes-370-1x.jpg" alt="Проект Boxes" />
                   </picture>
@@ -349,7 +344,7 @@
                         ./images/inspiration-has-no-borders-370-2x.jpg 740w
                       "
                       media="(min-width: 1200px)"
-                      sizes="370px"
+                      sizes="(min-width: 1200px) 370px"
                     />
                     <source
                       srcset="
@@ -357,15 +352,14 @@
                         ./images/inspiration-has-no-borders-354-2x.jpg 708w
                       "
                       media="(min-width: 768px)"
-                      sizes="354px"
+                      sizes="(min-width: 768px) 354px"
                     />
                     <source
                       srcset="
                         ./images/inspiration-has-no-borders-450-1x.jpg 450w,
                         ./images/inspiration-has-no-borders-450-2x.jpg 900w
                       "
-                      media="(min-width: 480px)"
-                      sizes="450px, 100vw"
+                      sizes="(min-width: 480px) 450px, 100vw"
                     />
                     <img
                       src="./images/inspiration-has-no-borders-370-1x.jpg"
@@ -395,7 +389,7 @@
                         ./images/limited-edition-370-2x.jpg 740w
                       "
                       media="(min-width: 1200px)"
-                      sizes="370px"
+                      sizes="(min-width: 1200px) 370px"
                     />
                     <source
                       srcset="
@@ -403,15 +397,14 @@
                         ./images/limited-edition-354-2x.jpg 708w
                       "
                       media="(min-width: 768px)"
-                      sizes="354px"
+                      sizes="(min-width: 768px) 354px"
                     />
                     <source
                       srcset="
                         ./images/limited-edition-450-1x.jpg 450w,
                         ./images/limited-edition-450-2x.jpg 900w
                       "
-                      media="(min-width: 480px)"
-                      sizes="450px, 100vw"
+                      sizes="(min-width: 480px) 450px, 100vw"
                     />
                     <img src="./images/limited-edition-370-1x.jpg" alt="Издание Limited Edition" />
                   </picture>
@@ -435,17 +428,16 @@
                     <source
                       srcset="./images/lab-370-1x.jpg 370w, ./images/lab-370-2x.jpg 740w"
                       media="(min-width: 1200px)"
-                      sizes="370px"
+                      sizes="(min-width: 1200px) 370px"
                     />
                     <source
                       srcset="./images/lab-354-1x.jpg 354w, ./images/lab-354-2x.jpg 708w"
                       media="(min-width: 768px)"
-                      sizes="354px"
+                      sizes="(min-width: 768px) 354px"
                     />
                     <source
                       srcset="./images/lab-450-1x.jpg 450w, ./images/lab-450-2x.jpg 900w"
-                      media="(min-width: 480px)"
-                      sizes="450px, 100vw"
+                      sizes="(min-width: 480px) 450px, 100vw"
                     />
                     <img src="./images/lab-370-1x.jpg" alt="Проект LAB" />
                   </picture>
@@ -472,7 +464,7 @@
                         ./images/growing-business-370-2x.jpg 740w
                       "
                       media="(min-width: 1200px)"
-                      sizes="370px"
+                      sizes="(min-width: 1200px) 370px"
                     />
                     <source
                       srcset="
@@ -480,15 +472,14 @@
                         ./images/growing-business-354-2x.jpg 708w
                       "
                       media="(min-width: 768px)"
-                      sizes="354px"
+                      sizes="(min-width: 768px) 354px"
                     />
                     <source
                       srcset="
                         ./images/growing-business-450-1x.jpg 450w,
                         ./images/growing-business-450-2x.jpg 900w
                       "
-                      media="(min-width: 480px)"
-                      sizes="450px, 100vw"
+                      sizes="(min-width: 480px) 450px, 100vw"
                     />
                     <img src="./images/growing-business-370-1x.jpg" alt="Growing Business" />
                   </picture>
@@ -521,7 +512,7 @@
                 <a
                   href="https://goo.gl/maps/mUnxRLxeDmvpBzua8"
                   target="_blank"
-                  class="address__link address-set__link--accent"
+                  class="address__link address__link--accent"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
